# Projects

Android/: pubspec.yaml
Android/MyID/: settings.gradle.kts
CMake_BuildLib/: CMakeLists.txt  main.cpp  version.h
CPP projects/minhHttpServer/: httpmessage.h  httpserver.h  main.cpp
CPP projects/minhHttpServer_MultiClients/: client  client.cpp  httpmessage.cpp  httpserver.cpp  main
Embedded Systems Proj/0_Getting Started/: Getting Started 155e19aaf59580ddb8f1cd7bb2662481.md
Embedded Systems Proj/11_CAN/: CAN Layer 2 operation 15ae19aaf59580d69703fa93a8b48fb2.md  Physical Operation of CAN 15ae19aaf59580098d2adc0d942c843c.md
Embedded Systems Proj/12_Embedded Interview questions/: Interview questions 14fe19aaf59580b08810db52f07e1181.md
Embedded Systems Proj/CAN/: CAN 159e19aaf595808187f4d4e8a702c085.md
Embedded Systems Proj/Flash/: Flash 143e19aaf595803cad12de7fdc956d10.md
Flutter/tma_id/: README.md  pubspec.yaml
QT_Applications/: Event_Driven_Messaging_System 168e19aaf595800c9c0cf3eea55297ad.md  Event_Driven_Messaging_System.md
QT_Applications/Event_Driven_Messaging_System/: CustomEvent.h  Event_Driven_Messaging_System.pro  custom_event.h  event_manager.cpp  event_manager.h  i_publisher.h  i_subscriber.h  main.cpp  main.qml  msgreceiver.cpp  msgreceiver.h  msgsender.cpp  msgsender.h  publisher.cpp  publisher.h  (+8 more)
RapidXML/: applyRapidXML.cpp
XML Parser/: xmlParser.cpp
gradle/: libs.versions.toml
minhHttpServer/: httpmessage.h  httpserver.cpp  main  readme.md
minhHttpServer_MultiClients/: httpserver.cpp  httpserver.h  main  main.cpp  readme.md
(+108 files in other folders)
